src/objects/CBL2_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>ppi_Nacional_Indigencia_Score__c</fullName>
        <label>ppi_Nacional_Indigencia_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_Nacional_Score__c</fullName>
        <label>ppi_Nacional_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_Score__c</fullName>
        <label>ppi_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>productivity__c</fullName>
        <formula>totalCoffeePlantedArea__c/totalProductionLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>productivity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbuxSegmentProbability__c</fullName>
        <label>sbuxSegmentProbability</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>sbuxSegment__c</fullName>
        <label>sbuxSegment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_ReaseonVisitNotUseful__c</fullName>
        <label>service_ReaseonVisitNotUseful</label>
        <picklist>
            <picklistValues>
                <fullName>El objetivo de la visita no fue claro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al técnico le faltaban conocimientos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fue muy rápida y poco útil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_anualTecnicoVisits__c</fullName>
        <label>service_anualTecnicoVisits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>service_certificationTrainings__c</fullName>
        <label>service_certificationTrainings</label>
        <picklist>
            <picklistValues>
                <fullName>Comercio Justo (FLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico UE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico JAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico NOP-USDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A.F.E practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amigable con aves/SBF (Bird friendly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café de Mujer/Café femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPP/Small Producers/Pequeño Productor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_contractsToSell_BuyCoffee__c</fullName>
        <label>service_contractsToSell&amp;BuyCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_creditServiceImprovements__c</fullName>
        <label>service_creditServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>El trámite debe ser más rápido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los plazos deberían ser mayores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los montos deben aumentar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasas de interés altas vs otras org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No puedo cumplir con los requisitos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_creditServiceScoring__c</fullName>
        <label>service_creditServiceScoring</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_gatheringServiceImprovements__c</fullName>
        <label>service_gatheringServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>Precio más alto que otros compradores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pago más rápido que otros compradores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acopio y entregas más rápidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_gatheringServiceScore__c</fullName>
        <label>service_gatheringServiceScore</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_mechanismsComplaints__c</fullName>
        <label>service_mechanismsComplaints</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_meetingsParticipation__c</fullName>
        <label>service_meetingsParticipation</label>
        <picklist>
            <picklistValues>
                <fullName>Participa en capacitaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participa en las Asambleas Generales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participa de reuniones en la comunidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No participa en ninguna reunión</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_organizationSatisfaction__c</fullName>
        <label>service_organizationSatisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Muy contento y muy satisfecho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contento y satisfecho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiferente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferiría pertenecer a otra organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pienso retirarme de la organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No pertenezco a ninguna organización</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_organizationServices__c</fullName>
        <label>service_organizationServices</label>
        <picklist>
            <picklistValues>
                <fullName>Compra de café/acopio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abastecimiento/Insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asistencia Técnica (visitas de técnico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crédito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proyectos de mejoramiento comunitario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios para mejoramiento café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro de vida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios / becas escolares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejoramiento de Vivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_supplyingServiceImprovements__c</fullName>
        <label>service_supplyingServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>Aumentar la cantidad de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar la disponibilidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precios deberían ser más bajos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiempo de despacho más rápido</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_supplyingServiceScore__c</fullName>
        <label>service_supplyingServiceScore</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_trainingTopics__c</fullName>
        <label>service_trainingTopics</label>
        <picklist>
            <picklistValues>
                <fullName>Variedades del cultivo del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semilleros y almácigos de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establecimiento de plantaciones de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservación de suelos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilidad suelo y nutrición cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de plagas en el cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de enfermedades en el cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de malezas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de sombra del cultivo del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>manejo de tejidos (podas y renovación)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo responsable de agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrar equipos y aplicar agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calidad, cosecha y procesamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trazabilidad e innocuidad de cosechas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsabilidad laboral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>legislación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno de los anteriores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criterios Fairtrade para prácticas amb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo peligroso, riesgos para salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qué hacer en caso de accidente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso apropiado de fertilizantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedimientos para un uso agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reutilización de desechos orgánicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_trainingUsefulness__c</fullName>
        <label>service_trainingUsefulness</label>
        <picklist>
            <picklistValues>
                <fullName>Certificarse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar Productividad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementación de BPAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejoramiento de la Calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>service_trainingsImproveCrop__c</fullName>
        <label>service_trainingsImproveCrop</label>
        <picklist>
            <picklistValues>
                <fullName>Muy útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poco útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No útiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_visitUsefulness__c</fullName>
        <label>service_visitUsefulness</label>
        <picklist>
            <picklistValues>
                <fullName>Mejorar el cultivo/plantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar almácigos/plantillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cumplir con certificaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No le han sido útiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_Banco__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Banco&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: Banco</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_Family__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Crédito familiar&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_Informal__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Prestamista&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: Informal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_MFI__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Microfinanciera&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: MFI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_Middle_man__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Intermediario (comprador)&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: Middle man</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_Financing_source_coop__c</fullName>
        <formula>IF(INCLUDES(socioe_debtsFinancingSource__c, &quot;Cooperativa de productores&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>socioe_Financing source: coop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_advocadoAreaUnits__c</fullName>
        <label>socioe_advocadoAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_advocadoArea__c</fullName>
        <label>socioe_advocadoArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_bananaPlantainAreaUnits__c</fullName>
        <label>socioe_bananaPlantainAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_bananaPlantainArea__c</fullName>
        <label>socioe_bananaPlantainArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_bankAccount__c</fullName>
        <label>socioe_bankAccount</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_basicGrainsAreaUnits__c</fullName>
        <label>socioe_basicGrainsAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_basicGrainsArea__c</fullName>
        <label>socioe_basicGrainsArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_birdsRabbitsGuineaPigs__c</fullName>
        <label>socioe_birdsRabbitsGuineaPigs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_bullsCowsCalfs__c</fullName>
        <label>socioe_bullsCowsCalfs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_cardamomAreaUnit__c</fullName>
        <label>socioe_cardamomAreaUnit</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_cardamomArea__c</fullName>
        <label>socioe_cardamomArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_childrenStudying__c</fullName>
        <label>socioe_childrenStudying</label>
        <picklist>
            <picklistValues>
                <fullName>Si, TODOS están asistiendo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, TODOS están asistiendo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_citrusAreaUnits__c</fullName>
        <label>socioe_citrusAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_citrusArea__c</fullName>
        <label>socioe_citrusArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_cocoaAreaUnits__c</fullName>
        <label>socioe_cocoaAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_cocoaArea__c</fullName>
        <label>socioe_cocoaArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_creditDestination__c</fullName>
        <label>socioe_creditDestination</label>
        <picklist>
            <picklistValues>
                <fullName>Plantación café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructura café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros cultivos agrícolas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción pecuaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negocio propio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_creditInterestRate__c</fullName>
        <label>socioe_creditInterestRate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_daysOfWageAgriculture__c</fullName>
        <label>socioe_daysOfWageAgriculture</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_debtPaymentCapacitySituation__c</fullName>
        <label>socioe_debtPaymentCapacitySituation</label>
        <picklist>
            <picklistValues>
                <fullName>Tendrá suficiente capacidad para pagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendrá dificultadoes para pagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_debtPaymentSituation__c</fullName>
        <label>socioe_debtPaymentSituation</label>
        <picklist>
            <picklistValues>
                <fullName>Está al día con sus pagos o cuotas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Está atrasado en sus pagos o cuotas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_debtsFinancingSource__c</fullName>
        <label>socioe_debtsFinancingSource</label>
        <picklist>
            <controllingField>socioe_debtsFinancingSource_contr__c</controllingField>
            <picklistValues>
                <fullName>Crédito familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediario (comprador)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa de productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microfinanciera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_debtsFinancingSource_contr__c</fullName>
        <label>socioe_debtsFinancingSource_contr</label>
        <picklist>
            <picklistValues>
                <fullName>Crédito familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediario (comprador)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa de productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microfinanciera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_debts__c</fullName>
        <label>socioe_debts</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_electricEnergy__c</fullName>
        <label>socioe_electricEnergy</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_forestAreaUnits__c</fullName>
        <label>socioe_forestAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_forestArea__c</fullName>
        <label>socioe_forestArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_grassPodderAreaUnits__c</fullName>
        <label>socioe_grassPodderAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_grassPodderArea__c</fullName>
        <label>socioe_grassPodderArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_hives__c</fullName>
        <label>socioe_hives</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>